# clipboard-manager

./: .gitignore
.github/workflows/: build-simple.yml  build.yml
.trellis/: .template-hashes.json
.trellis/spec/frontend/: quality-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/06-29-clipboard-manager/: check.jsonl  design.md  implement.jsonl  implement.md  prd.md  task.json
.trellis/workspace/issak/: index.md  journal-1.md
clipboard-manager/: .gitignore  index.html  package-lock.json  package.json
clipboard-manager/src/: App.tsx  styles.css
clipboard-manager/src-tauri/: Cargo.toml  tauri.conf.json
clipboard-manager/src-tauri/src/: clipboard_monitor.rs  commands.rs  database.rs  hotkey.rs  main.rs  search.rs  tray.rs
clipboard-manager/src/components/: ClipboardList.tsx  SearchBar.tsx  SettingsPanel.tsx
clipboard-manager/src/hooks/: useClipboard.ts
clipboard-manager/src/types/: index.ts
