[package]
name = "clipboard-manager"
version = "0.1.0"
description = "A clipboard manager built with Tauri"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["global-shortcut-all", "clipboard-read-text", "clipboard-write-text", "fs-all", "path-all", "dialog"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v7"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs-next = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "winbase"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
